--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.414.0",
     "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
